@@ -1,13 +1,13 @@
 <?php
 
 /**
- * myDoctrineRecord form.
+ * AuthorInheritance form.
  *
  * @package    form
- * @subpackage myDoctrineRecord
+ * @subpackage AuthorInheritance
  * @version    SVN: $Id: sfDoctrineFormTemplate.php 6174 2007-11-27 06:22:40Z fabien $
  */
-class myDoctrineRecordForm extends BasemyDoctrineRecordForm
+class AuthorInheritanceForm extends BaseAuthorInheritanceForm
 {
   public function configure()
   {
